Make Table Head center aligned, make columns have a fixed MINIMUM width, Replace overflow with overflow-x at table.
* Add `min-width: 15em` to `.markdown table tr th`
* Remove `text-align: left` from `.markdown table tr th` (it feels nicer if its center-aligned)
* Replace `overflow: auto` with `overflow-x: scroll`.

I have tested this locally via developer console it will work as intended.

--- a/apps/cyberstorm-remix/app/styles/markdown.css
+++ b/apps/cyberstorm-remix/app/styles/markdown.css
@@ -177,7 +177,7 @@
       width: 100%;
       border-collapse: separate;
       border-spacing: 0;
-      overflow: auto;
+      overflow-x: scroll;
     }
 
     tbody tr:nth-child(even) {
@@ -194,13 +194,13 @@
       border-right: var(--border-width--px) solid var(--color-surface-a8);
       border-bottom: var(--border-width--px) solid var(--color-surface-a8);
       color: var(--color-text-primary);
+      min-width: 15em;
     }
 
     table tr th {
       border-top: solid var(--border-width--px) var(--color-surface-a8);
       color: var(--color-text-tertiary);
       white-space: nowrap;
-      text-align: left;
       background: var(--color-surface-5);
 
       * {
